syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.banking.grpc";
option java_outer_classname = "AccountServiceProto";

package banking;

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (AccountResponse) {}
  rpc Deposit (TransactionRequest) returns (AccountResponse) {}
  rpc Withdraw (TransactionRequest) returns (AccountResponse) {}
  rpc Transfer (TransferRequest) returns (TransferResponse) {}
  rpc GetBalance (AccountRequest) returns (BalanceResponse) {}
  rpc FreezeAccount (AccountRequest) returns (AccountResponse) {}
  rpc CloseAccount (AccountRequest) returns (AccountResponse) {}
}

message CreateAccountRequest {
  string owner_id = 1;
  string currency = 2;
  string account_type = 3;
  string initial_balance = 4; // String representation of BigDecimal
}

message TransactionRequest {
  string account_id = 1;
  string amount = 2; // String representation of BigDecimal
}

message TransferRequest {
  string source_id = 1;
  string target_id = 2;
  string amount = 3;
}

message AccountRequest {
  string account_id = 1;
}

message AccountResponse {
  string account_id = 1;
  string account_number = 2;
  string owner_id = 3;
  string balance = 4;
  string currency = 5;
  string account_type = 6;
  string status = 7;
}

message BalanceResponse {
  string balance = 1;
}

message TransferResponse {
  string source_balance = 1;
  string target_balance = 2;
}